Various enhancements and additions to the project